deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: getting-started-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: getting-started-app
  template:
    metadata:
      labels:
        app: getting-started-app
    spec:
      containers:
        - name: app
          image: mahmoudmabdelhamid/getting-started
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"

          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 5
            failureThreshold: 3

          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 5
            failureThreshold: 3
