app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: getting-started-app
spec:
  selector:
    app: getting-started-app
  ports:
    - protocol: TCP
      port: 80          
      targetPort: 3000  
  type: ClusterIP
